Fixing spacing

--- a/src/components/player.css
+++ b/src/components/player.css
@@ -1,44 +1,3 @@
-.latest-episode {
-  display: flex;
-  color: #fff;
-  font-family: "Montserrat";
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  height: calc(100% - 86px);
-}
-
-.latest-episode-info {
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
-
-.play {
-  margin-right: 48px;
-  width: 64px;
-}
-
-.latest-episode-title {
-  margin-bottom: 8px;
-  margin-top: 0;
-}
-
-.latest-episode-title::after {
-  width: 0;
-  height: 0;
-}
-
-.latest-episode-date {
-  margin-bottom: 8px;
-  font-size: 14px;
-  text-transform: uppercase;
-}
-
-.latest-episode-description {
-  max-width: 580px;
-}
-
 .player[value] {
   width: 650px;
   height: 8px;
